画像比率調整

--- a/css/styles.css
+++ b/css/styles.css
@@ -2772,6 +2772,7 @@ input::placeholder {
   margin-right: auto;
 }
 
+.p-top-people__top-title img,
 .p-top-people__title img {
   width: 100%;
   height: auto;
