--- a/src/sass/project/_p-top-people.scss
+++ b/src/sass/project/_p-top-people.scss
@@ -32,6 +32,7 @@
   margin-left: auto;
   margin-right: auto;
 }
+.p-top-people__top-title img,
 .p-top-people__title img {
   width: 100%;
   height: auto;
