--- a/css/styles.css
+++ b/css/styles.css
@@ -2015,6 +2015,249 @@ input::placeholder {
   height: auto;
 }
 
+.p-page-mv {
+  position: relative;
+  padding-top: 221px;
+  padding-top: 13.8125rem;
+}
+
+.p-page-mv--intern::before {
+  position: absolute;
+  content: "";
+  background: url(../images/common/mv_bg_intern.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  aspect-ratio: 1920/1299;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: auto;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.p-page-mv__title-en {
+  font-family: "lato-italic", sans-serif;
+  display: block;
+  font-weight: 900;
+  font-style: italic;
+  font-size: 160px;
+  font-size: 10rem;
+  color: #242424;
+}
+
+.p-page-mv__title-ja {
+  color: #242424;
+  display: block;
+  font-size: 50px;
+  font-size: 3.125rem;
+  font-weight: 900;
+}
+
+.p-page-mv__img {
+  max-width: 744px;
+  max-width: 46.5rem;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 122px;
+  margin-top: 7.625rem;
+}
+
+.p-page-mv__img img {
+  width: 100%;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center center;
+     object-position: center center;
+}
+
+.p-page-mv__text-wrapper {
+  margin-top: 90px;
+  margin-top: 5.625rem;
+  text-align: center;
+}
+
+.p-page-mv__text {
+  font-size: 26px;
+  font-size: 1.625rem;
+  color: #242424;
+  line-height: 3.4615384615;
+  font-weight: 700;
+  letter-spacing: 0.05em;
+}
+
+.p-program {
+  padding-top: 210px;
+  padding-top: 13.125rem;
+  position: relative;
+  z-index: 1;
+}
+
+.p-program::before {
+  position: absolute;
+  content: "";
+  background: url(../images/common/program_bg.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: auto;
+  aspect-ratio: 1920/1883;
+  -o-object-fit: cover;
+     object-fit: cover;
+  top: 80px;
+  top: 5rem;
+  left: 0;
+  z-index: -1;
+}
+
+.p-program__content {
+  max-width: 1200px;
+  max-width: 75rem;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.p-program__title {
+  text-align: center;
+}
+
+.p-program__text-wrapper {
+  margin-top: 60px;
+  margin-top: 3.75rem;
+  text-align: center;
+}
+
+.p-program__text {
+  font-size: 18px;
+  font-size: 1.125rem;
+  color: #242424;
+  font-weight: 400;
+  line-height: 1.8888888889;
+  letter-spacing: 0.05em;
+}
+
+.p-program__schedule {
+  background: rgba(255, 255, 255, .7);
+  border-radius: 3.125rem;
+  padding-top: 76px;
+  padding-top: 4.75rem;
+  padding-left: 100px;
+  padding-left: 6.25rem;
+  padding-right: 100px;
+  padding-right: 6.25rem;
+  padding-bottom: 60px;
+  padding-bottom: 3.75rem;
+  filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feGaussianBlur in="SourceAlpha" stdDeviation="15" /><feOffset dx="1" dy="1" result="offsetblur" /><feFlood flood-color="rgba(0,0,0,0.1)" /><feComposite in2="offsetblur" operator="in" /><feMerge><feMergeNode /><feMergeNode in="SourceGraphic" /></feMerge></filter></svg>#filter');
+  -webkit-filter: drop-shadow(0 0 15px rgba(0, 0, 0, .1));
+          filter: drop-shadow(0 0 15px rgba(0, 0, 0, .1));
+  margin-top: 40px;
+  margin-top: 2.5rem;
+}
+
+.p-program__schedule-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 40px;
+  gap: 2.5rem;
+}
+
+.p-program__schedule-title {
+  font-size: 60px;
+  font-size: 3.75rem;
+  font-weight: 900;
+  color: #242424;
+  font-family: "lato-italic", sans-serif;
+}
+
+.p-program__schedule-ja {
+  font-weight: 700;
+  font-size: 18px;
+  font-size: 1.125rem;
+  color: #242424;
+}
+
+.p-program__bottom {
+  text-align: center;
+  margin-top: 20px;
+  margin-top: 1.25rem;
+}
+
+.p-program__img {
+  margin-top: 40px;
+  margin-top: 2.5rem;
+}
+
+.p-program__img img {
+  width: 100%;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center center;
+     object-position: center center;
+}
+
+.p-program__lists {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 60px;
+  gap: 3.75rem;
+  margin-top: 60px;
+  margin-top: 3.75rem;
+}
+
+.p-program__list {
+  background: rgba(255, 255, 255, .7);
+  filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feGaussianBlur in="SourceAlpha" stdDeviation="15" /><feOffset dx="1" dy="1" result="offsetblur" /><feFlood flood-color="rgba(0,0,0,0.1)" /><feComposite in2="offsetblur" operator="in" /><feMerge><feMergeNode /><feMergeNode in="SourceGraphic" /></feMerge></filter></svg>#filter');
+  -webkit-filter: drop-shadow(0 0 15px rgba(0, 0, 0, .1));
+          filter: drop-shadow(0 0 15px rgba(0, 0, 0, .1));
+  border-radius: 1.875rem;
+  padding: 30px 25px;
+  padding: 1.875rem 1.5625rem;
+}
+
+.p-program__detail {
+  margin-top: -40px;
+  margin-top: -2.5rem;
+}
+
+.p-program__detail-img img {
+  width: 100%;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center center;
+     object-position: center center;
+}
+
+.p-program__detail-title {
+  font-size: 26px;
+  font-size: 1.625rem;
+  font-weight: 700;
+  color: #242424;
+  letter-spacing: 0.05em;
+}
+
+.p-program__detail-text {
+  margin-top: 25px;
+  margin-top: 1.5625rem;
+  font-size: 16px;
+  font-size: 1rem;
+  line-height: 2;
+  color: #242424;
+  font-weight: 400;
+  letter-spacing: 0.05em;
+}
+
 /* スライダー全体 */
 .p-scroll-imgText {
   display: -webkit-box;
@@ -2061,6 +2304,86 @@ input::placeholder {
             transform: translateX(-100%);
   }
 }
+@keyframes scroll-left {
+  from {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  to {
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+  }
+}
+/* スライダー全体 */
+.p-scroll-photo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; /* スライドのグループを横並び */
+  overflow-x: clip; /* はみ出たスライドを隠す */
+  margin-top: 127px;
+  margin-top: 7.9375rem;
+  position: relative;
+}
+
+.p-scroll-photo::before {
+  position: absolute;
+  content: "";
+  background: url(../images/common/scroll_photo_intern_bg.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  aspect-ratio: 1920/1169;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: auto;
+  top: -400px;
+  top: -25rem;
+  left: 0;
+  z-index: 0;
+}
+
+/* スライド3枚のグループ */
+.p-scroll-photo__slider {
+  -webkit-animation: scroll-left 20s infinite linear 0.5s both;
+          animation: scroll-left 20s infinite linear 0.5s both;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; /* スライド3枚を横並び */
+  gap: 30px;
+  gap: 1.875rem;
+}
+
+.p-scroll-photo__slider + .p-scroll-photo__slider {
+  margin-left: 30px;
+  margin-left: 1.875rem;
+}
+
+/* スライド */
+.p-scroll-photo__slide {
+  width: 20vw; /* 3はスライドの枚数 */
+}
+
+.p-scroll-photo__slide:nth-child(odd) {
+  margin-top: 30px;
+  margin-top: 1.875rem;
+}
+
+/* スライドの画像 */
+.p-scroll-photo__slide img {
+  display: block;
+  width: 100%;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center center;
+     object-position: center center;
+  filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feGaussianBlur in="SourceAlpha" stdDeviation="15" /><feOffset dx="1" dy="1" result="offsetblur" /><feFlood flood-color="rgba(0,0,0,0.1)" /><feComposite in2="offsetblur" operator="in" /><feMerge><feMergeNode /><feMergeNode in="SourceGraphic" /></feMerge></filter></svg>#filter');
+  -webkit-filter: drop-shadow(0 0 15px rgba(0, 0, 0, .1));
+          filter: drop-shadow(0 0 15px rgba(0, 0, 0, .1));
+}
+
+/* CSSアニメーション */
 @keyframes scroll-left {
   from {
     -webkit-transform: translateX(0);
@@ -2929,97 +3252,6 @@ input::placeholder {
   max-width: rem(429);
   width: 100%;
 } */
-.c-main-text {
-  font-size: 13px;
-  font-size: 0.8125rem;
-  line-height: 1.6;
-  color: #363636;
-}
-@media screen and (min-width: 768px) {
-  .c-main-text {
-    font-size: 1.125rem;
-    line-height: 1.75;
-  }
-}
-
-.c-main-title {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.c-main-title__ja {
-  color: #363636;
-  line-height: 1.2;
-  font-size: 20px;
-  font-size: 1.25rem;
-  font-family: "Noto Serif JP", serif;
-  font-weight: 600;
-  letter-spacing: 0.1em;
-}
-@media screen and (min-width: 768px) {
-  .c-main-title__ja {
-    letter-spacing: 0.15em;
-    font-size: 1.75rem;
-  }
-}
-
-.c-main-title__ja--child {
-  font-family: "Source Han Sans JP", sans-serif;
-  font-size: 18px;
-  font-size: 1.125rem;
-}
-@media screen and (min-width: 768px) {
-  .c-main-title__ja--child {
-    font-size: 1.75rem;
-  }
-}
-
-.c-main-title__ja--child span {
-  display: none;
-}
-@media screen and (min-width: 768px) {
-  .c-main-title__ja--child span {
-    font-size: 1.375rem;
-    display: block;
-  }
-}
-
-.c-main-title__ja--small {
-  font-size: 14px;
-  font-size: 0.875rem;
-  letter-spacing: 0.1em;
-}
-@media screen and (min-width: 768px) {
-  .c-main-title__ja--small {
-    font-size: 1.25rem;
-    letter-spacing: 0.15em;
-  }
-}
-
-.c-main-title__en {
-  text-transform: uppercase;
-  color: rgba(54, 54, 54, .5);
-  letter-spacing: 0.1em;
-  line-height: 1.2;
-  margin-top: 4px;
-  margin-top: 0.25rem;
-  font-size: 13px;
-  font-size: 0.8125rem;
-  font-weight: 600;
-}
-@media screen and (min-width: 768px) {
-  .c-main-title__en {
-    margin-top: 0.875rem;
-    font-size: 1rem;
-    letter-spacing: 0.2em;
-  }
-}
-
 .c-section-title__en {
   font-size: 110px;
   font-size: 6.875rem;
@@ -3036,5 +3268,10 @@ input::placeholder {
   font-size: 30px;
   font-size: 1.875rem;
   font-weight: 900;
+}
+
+.c-section-title__ja--small {
+  font-size: 20px;
+  font-size: 1.25rem;
 }
 /*# sourceMappingURL=styles.css.map */
