--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
-Theme Name: ブループリントテンプレート
+Theme Name: 株式会社フクダ｜採用サイト
 Theme URI: 
 Author: Y.U
 Author URI: 
-Description: ブループリントテンプレート
+Description: 株式会社フクダ｜採用サイト
 Version: 1.0
 */
