--- a/src/sass/project/_p-scroll-photo.scss
+++ b/src/sass/project/_p-scroll-photo.scss
@@ -22,6 +22,9 @@
   left: 0;
   z-index: 0;
 }
+.p-scroll-photo--culture::before {
+  display: none;
+}
 /* スライド3枚のグループ */
 .p-scroll-photo__slider {
   animation: scroll-left 20s infinite linear 0.5s both;
