--- a/src/sass/project/_p-row.scss
+++ b/src/sass/project/_p-row.scss
@@ -2,6 +2,37 @@
 
 .p-row {
   padding-top: rem(250);
+  position: relative;
+}
+.p-row::before {
+  position: absolute;
+  content: "";
+  background: url(../images/common/row_bg1.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  aspect-ratio: 1920 / 1651;
+  object-fit: cover;
+  width: 100%;
+  height: auto;
+  top: rem(160);
+  left: 0;
+  z-index: -1;
+}
+.p-row--second::before {
+  position: absolute;
+  content: "";
+  background: url(../images/common/row_bg2.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  aspect-ratio: 1920 / 1681;
+  object-fit: cover;
+  width: 100%;
+  height: auto;
+  top: rem(100);
+  left: 0;
+  z-index: -1;
 }
 
 .p-row__content {
@@ -13,12 +44,14 @@
   flex-direction: row-reverse;
   gap: rem(63);
 }
-
+.p-row__content--second {
+  flex-direction: row;
+}
 .p-row__title-wrapper {
   max-width: rem(131);
   width: 100%;
 }
-.p-row__title-wrapper img{
+.p-row__title-wrapper img {
   width: 100%;
   height: auto;
   object-fit: cover;
@@ -28,6 +61,7 @@
 .p-row__block {
   padding: rem(100);
   background: rgba($color: #fff, $alpha: 0.7);
+  backdrop-filter: blur(16px);
   border-radius: rem(50);
   filter: drop-shadow(0 0 15px rgba(0, 0, 0, 0.1));
   max-width: rem(1200);
@@ -65,11 +99,25 @@
   margin-top: rem(80);
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  row-gap: 10px;
-  column-gap: 10px;
+  column-gap: rem(40);
+  row-gap: rem(80);
 }
-
+.p-row__lists + .p-row__lists {
+  margin-top: rem(40);
+}
+.p-row__lists:nth-child(2n) {
+  padding-top: rem(40);
+  border-top: 1px dotted #cccccc;
+}
 .p-row__list {
+}
+.p-row__list--border {
+  @include mq(md) {
+    padding-left: rem(40);
+    padding-right: rem(40);
+    border-left: 1px dotted #cccccc;
+    border-right: 1px dotted #cccccc;
+  }
 }
 
 .p-row__img {
@@ -81,6 +129,12 @@
 .p-row__img--115 {
   max-width: rem(115);
 }
+.p-row__img203 {
+  max-width: rem(203);
+}
+.p-row__img398 {
+  max-width: rem(398);
+}
 .p-row__img img {
   width: 100%;
   height: auto;
@@ -89,6 +143,7 @@
 }
 
 .p-row__detail {
+  margin-top: rem(30);
 }
 
 .p-row__detail-title {
@@ -106,4 +161,15 @@
   font-weight: 400;
   letter-spacing: 0.05em;
   color: #242424;
+}
+.p-row__lists--double {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+.p-row__list--first {
+  padding-right: rem(40);
+}
+.p-row__list--second {
+  padding-left: rem(40);
+  border-left: 1px dotted #ccc;
 }
