--- a/src/sass/project/_p-page-mv.scss
+++ b/src/sass/project/_p-page-mv.scss
@@ -34,6 +34,21 @@
   left: 0;
   z-index: -1;
 }
+.p-page-mv--infographics::before {
+  position: absolute;
+  content: "";
+  background: url(../images/common/mv_bg_infographics.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  aspect-ratio: 1920 / 910;
+  object-fit: cover;
+  width: 100%;
+  height: auto;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
 
 .p-page-mv__content {
 }
