interviewページ途中まで（流れる文字まだ）

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,8 +23,13 @@ body.drawer-open {
   overflow: hidden;
 }
 
-body {
+.home {
   background: #f6f6f6;
+  overflow-x: clip;
+}
+
+.body-blue {
+  background: #3db5e5;
   overflow-x: clip;
 }
 
@@ -2369,6 +2374,271 @@ input::placeholder {
   gap: 0.625rem;
 }
 
+.p-inter {
+  padding-top: 150px;
+  padding-top: 9.375rem;
+  padding-bottom: 150px;
+  padding-bottom: 9.375rem;
+  position: relative;
+}
+
+.p-inter::before {
+  position: absolute;
+  content: "";
+  background: url(../images/common/interview_bg2.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  aspect-ratio: 1920/2088;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: auto;
+  left: 0;
+  top: 860px;
+  top: 53.75rem;
+  z-index: -1;
+}
+
+.p-inter::after {
+  position: absolute;
+  content: "";
+  background: url(../images/common/interview_bg3.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  aspect-ratio: 1920/1155;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: auto;
+  left: 0;
+  top: 3160px;
+  top: 197.5rem;
+  z-index: -1;
+}
+
+.p-inter__content {
+  max-width: 1200px;
+  max-width: 75rem;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.p-inter__img img {
+  width: 100%;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center center;
+     object-position: center center;
+}
+
+.p-inter__row {
+  margin-top: 80px;
+  margin-top: 5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+  gap: 70px;
+  gap: 4.375rem;
+}
+
+.p-inter__row--reverse {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin-top: 180px;
+  margin-top: 11.25rem;
+}
+
+.p-inter__detail {
+  max-width: 600px;
+  max-width: 37.5rem;
+  width: 100%;
+}
+
+.p-inter__detail-top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 15px;
+  gap: 0.9375rem;
+}
+
+.p-inter__num {
+  color: #fff;
+  font-family: "lato-italic", sans-serif;
+  font-size: 16px;
+  font-size: 1rem;
+  letter-spacing: 0.05em;
+  font-weight: 500;
+}
+
+.p-inter__sub {
+  font-size: 16px;
+  font-size: 1rem;
+  color: #fff;
+  font-weight: 400;
+  letter-spacing: 0.05em;
+}
+
+.p-inter__title {
+  font-size: 36px;
+  font-size: 2.25rem;
+  font-weight: 900;
+  color: #fff;
+  letter-spacing: 0.05em;
+}
+
+.p-inter__detail-textWrapper {
+  margin-top: 30px;
+  margin-top: 1.875rem;
+}
+
+.p-inter__detail-text {
+  font-size: 18px;
+  font-size: 1.125rem;
+  line-height: 1.8888888889;
+  font-weight: 400;
+  letter-spacing: 0.05em;
+  color: #fff;
+}
+
+.p-inter__rowImg {
+  max-width: 530px;
+  max-width: 33.125rem;
+  width: 100%;
+}
+
+.p-inter__rowImg img {
+  width: 100%;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center center;
+     object-position: center center;
+}
+
+.p-inter__img2 {
+  margin-top: 180px;
+  margin-top: 11.25rem;
+}
+
+.p-inter__img2 img {
+  width: 100%;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center center;
+     object-position: center center;
+}
+
+.p-inter__detail-middle {
+  margin-top: 80px;
+  margin-top: 5rem;
+}
+
+.p-interview {
+  padding-top: 140px;
+  padding-top: 8.75rem;
+  position: relative;
+}
+
+.p-interview::before {
+  position: absolute;
+  content: "";
+  background: url(../images/common/interview_bg1.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  aspect-ratio: 1920/1678;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: auto;
+  left: 0;
+  top: 0;
+  z-index: -1;
+}
+
+.p-interview__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  max-width: 1200px;
+  max-width: 75rem;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.p-interview__detail {
+  margin-right: -56px;
+  margin-right: -3.5rem;
+  margin-top: 120px;
+  margin-top: 7.5rem;
+}
+
+.p-interview__title {
+  font-size: 90px;
+  font-size: 5.625rem;
+  font-weight: 900;
+  color: #fff;
+  line-height: 1.3333333333;
+}
+
+.p-interview__en {
+  font-family: "lato-italic", sans-serif;
+  font-size: 30px;
+  font-size: 1.875rem;
+  font-weight: 700;
+  color: #fff;
+  margin-top: 30px;
+  margin-top: 1.875rem;
+}
+
+.p-interview__occupation {
+  font-size: 14px;
+  font-size: 0.875rem;
+  margin-top: 4px;
+  margin-top: 0.25rem;
+  color: #fff;
+  font-weight: 700;
+}
+
+.p-interview__img {
+  max-width: 618px;
+  max-width: 38.625rem;
+  width: 100%;
+  margin-right: -131px;
+  margin-right: -8.1875rem;
+}
+
+.p-interview__img img {
+  width: 100%;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center center;
+     object-position: center center;
+}
+
 .p-mv {
   position: relative;
   z-index: 2;
@@ -3727,6 +3997,10 @@ input::placeholder {
   left: 0;
 }
 
+.p-top-people--interview::before {
+  display: none;
+}
+
 .p-top-people__top-title {
   max-width: 396px;
   max-width: 24.75rem;
@@ -3808,6 +4082,11 @@ input::placeholder {
   width: 100vw;
   margin-top: -560px;
   margin-top: -35rem;
+}
+
+.p-top-people__swiper--interview {
+  margin-top: -440px;
+  margin-top: -27.5rem;
 }
 
 .p-top-people__item {
