--- a/src/sass/project/_p-interview.scss
+++ b/src/sass/project/_p-interview.scss
@@ -1,8 +1,8 @@
 @use "global" as *;
 
 .p-interview {
-  padding-top: rem(140);
   position: relative;
+  padding-top: rem(60);
 }
 .p-interview::before {
   position: absolute;
@@ -28,6 +28,7 @@
   width: 100%;
   margin-left: auto;
   margin-right: auto;
+  margin-top: rem(-88);
 }
 
 .p-interview__detail {
