--- a/src/sass/project/_p-top-people.scss
+++ b/src/sass/project/_p-top-people.scss
@@ -102,6 +102,9 @@
 .p-top-people__detail {
   margin-top: rem(-80);
 }
+.p-top-people__detail--429 {
+  margin-top: rem(-200);
+}
 .p-top-people__detail--right {
   position: absolute;
   bottom: 0;
