--- a/src/sass/project/_p-page-mv.scss
+++ b/src/sass/project/_p-page-mv.scss
@@ -3,6 +3,7 @@
 .p-page-mv {
   position: relative;
   padding-top: rem(221);
+  overflow-x: clip;
 }
 .p-page-mv--intern::before {
   position: absolute;
@@ -27,6 +28,21 @@
   background-position: center;
   background-size: cover;
   aspect-ratio: 1920 / 2227;
+  object-fit: cover;
+  width: 100%;
+  height: auto;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+.p-page-mv--career::before {
+  position: absolute;
+  content: "";
+  background: url(../images/common/mv_bg_career.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  aspect-ratio: 1920 / 2398;
   object-fit: cover;
   width: 100%;
   height: auto;
