--- a/src/sass/project/_p-scroll-photo.scss
+++ b/src/sass/project/_p-scroll-photo.scss
@@ -22,7 +22,8 @@
   left: 0;
   z-index: 0;
 }
-.p-scroll-photo--culture::before {
+.p-scroll-photo--culture::before,
+.p-scroll-photo--career::before {
   display: none;
 }
 /* スライド3枚のグループ */
